# mlops_project_EliasDargham_AnthonyTABET

./: .README.md  .gitignore  README.md  docker-compose.yaml
.github/workflows/: ci.yml
lp-det/: .env  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  pyproject.toml  tasks.py
lp-det/alermanager/: alertmanager.yml
lp-det/config/: config-dev.yaml
lp-det/prometheus/: alert_rules.yml  prometheus.yml
lp-det/src/detector_training/: train.py
lp-det/src/detector_training/config_loader/: config.py
lp-det/src/inference_tracking/: infer.py  monitoring.py
lp-det/src/inference_tracking/object_tracking/: __init__.py  tracker.py  utils.py
lp-det/src/inference_tracking/realtime_tracking/: __init__.py  overrides.py
lp-det/src/lp_det/: main.py
lp-det/src/lp_det/config_loader/: __init__.py  config.py
lp-det/src/object_tracker/deep_sort_realtime/: __init__.py  overrides.py  track.py
lp-det/src/object_tracker/object_tracking/: main.py  tracker.py  utils.py
lp-det/tests/: test_config_loading.py  test_process_track.py
mlops_project_EliasDargham_AnthonyTabet/: pyproject.toml
