[tool.poetry]
name = "lp-det"
version = "0.1.0"
description = ""
authors = ["Elias Dargham <edargham@hotmail.com>"]
readme = "README.md"
packages = [{include = "detector_training", from = "src"}, {include = "inference_tracking", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
ultralytics = "^8.3.40"
protobuf = "^3.20.0"
pydantic = "^2.9.2"
omegaconf = "^2.3.0"
python-dotenv = "^1.0.1"
mlflow = "^2.18.0"
deep-sort-realtime = "^1.3.2"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.poetry.scripts]
lp-det-train = "detector_training.train:main"
lp-det-infer = "inference_tracking.infer:main"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
